refactor: 代码优化及移除过期的 API